# HIsForHaskell

./: LICENSE  hello.cabal
.github/: release.yml
.github/workflows/: ci.yml  release.yml
app/: Main.hs
